test/expected/explain_ktnk.out
explain typename T x
                 ^
18: error: qualified name expected after "typename"
